force-app/main/default/objects/EMS_TM_Project__c/EMS_TM_Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>