force-app/main/default/objects/EMS_TM_Project__c/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <label>Approval Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>