force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_Budget__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>