force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_ClientName__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_ClientName__c</fullName>
    <label>Client Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Cloud Peritus</fullName>
            </value>
            <value>
                <fullName>Fission Labs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>