force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>