force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Project_Name__c</fullName>
    <label>Project Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>