force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Project_Type__c</fullName>
    <formula>IF( ISPICKVAL(Type_Of_Project__c, &apos;Client Projects&apos;) || (ISPICKVAL(Type_Of_Project__c, &apos;Internal Projects&apos;) &amp;&amp; Name &lt;&gt; &apos;Bench&apos;)
|| (ISPICKVAL(Type_Of_Project__c, &apos;Global Projects&apos;) &amp;&amp; Name &lt;&gt; &apos;OOO&apos;&amp;&amp; Name &lt;&gt; &apos;Other&apos;), &apos;Client&apos;,

IF( ISPICKVAL(Type_Of_Project__c, &apos;Global Projects&apos;) &amp;&amp; Name = &apos;Other&apos; , &apos;Other&apos;,

IF( ISPICKVAL(Type_Of_Project__c, &apos;Global Projects&apos;) &amp;&amp; Name = &apos;OOO&apos; , &apos;OOO&apos;,

IF( ISPICKVAL(Type_Of_Project__c, &apos;Internal Projects&apos;) &amp;&amp; Name = &apos;Bench&apos;, &apos;Bench&apos;, &apos;Client&apos;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>