force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_StartDate__c</fullName>
    <label>StartDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>