force-app/main/default/objects/EMS_TM_Project__c/fields/EMS_TM_Status__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
                <default>true</default>
                <label>Ongoing</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>