force-app/main/default/objects/EMS_TM_Project__c/fields/LoginedUserContact__c.field-meta.xml
<CustomField>
    <fullName>LoginedUserContact__c</fullName>
    <formula>$User.ContactId =  Project_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoginedUserContact</label>
    <type>Checkbox</type>
</CustomField>