force-app/main/default/objects/EMS_TM_Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Onshore Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filterItems>
        <filterItems>
            <field>Contact.Resource_Role__r.Name</field>
            <operation>equals</operation>
            <value>Sr Project Manager</value>
        </filterItems>
        <filterItems>
            <field>Contact.Resource_Role__r.Name</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>