force-app/main/default/objects/EMS_TM_Project__c/fields/Reported_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reported_Hours__c</fullName>
    <label>Reported Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>