force-app/main/default/objects/EMS_TM_Project__c/fields/Type_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Project__c</fullName>
    <label>Type of Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Projects</fullName>
            </value>
            <value>
                <fullName>Internal Projects</fullName>
            </value>
            <value>
                <fullName>Global Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>