force-app/main/default/objects/EMS_TM_Project__c/recordTypes/Client_Projects.recordType-meta.xml
<RecordType>
    <fullName>Client_Projects</fullName>
    <active>false</active>
    <label>Client Projects</label>
</RecordType>