force-app/main/default/objects/EMS_TM_Project__c/recordTypes/Global_Projects.recordType-meta.xml
<RecordType>
    <fullName>Global_Projects</fullName>
    <active>false</active>
    <label>Global Projects</label>
</RecordType>