force-app/main/default/objects/EMS_TM_Project__c/recordTypes/Internal_Projects.recordType-meta.xml
<RecordType>
    <fullName>Internal_Projects</fullName>
    <active>false</active>
    <label>Internal Projects</label>
</RecordType>