force-app/main/default/objects/EMS_TM_Project__c/validationRules/Project_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(ISNEW(), ISCHANGED(EMS_TM_StartDate__c), ISCHANGED(EMS_TM_EndDate__c)),
    EMS_TM_EndDate__c &lt; EMS_TM_StartDate__c
)</errorConditionFormula>
    <errorMessage>End date should be greater than or equal to the  start date</errorMessage>
</ValidationRule>