force-app/main/default/objects/EMS_TM_Project__c/validationRules/Project_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),EMS_TM_StartDate__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>The start date should be grater than or equal to today&apos;s date.</errorMessage>
</ValidationRule>