force-app/main/default/objects/EMS_TM_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_StartDate__c</columns>
    <columns>EMS_TM_EndDate__c</columns>
    <columns>EMS_TM_Status__c</columns>
    <columns>Approval_Needed__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Type_Of_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>