force-app/main/default/objects/EMS_TM_Project__c/listViews/Client_Project.listView-meta.xml
<ListView>
    <fullName>Client_Project</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>EMS_TM_StartDate__c</columns>
    <columns>EMS_TM_EndDate__c</columns>
    <columns>EMS_TM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EMS_TM_Project__c.Client_Projects</value>
    </filters>
    <filters>
        <field>EMS_TM_Status__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <label>Active Client Projects</label>
</ListView>