force-app/main/default/objects/EMS_TM_Project__c/listViews/Global_Projects.listView-meta.xml
<ListView>
    <fullName>Global_Projects</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_StartDate__c</columns>
    <columns>EMS_TM_EndDate__c</columns>
    <columns>EMS_TM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Of_Project__c</field>
        <operation>equals</operation>
        <value>Global Projects</value>
    </filters>
    <label>Global Projects</label>
</ListView>