force-app/main/default/objects/EMS_TM_Project__c/listViews/Internal_Projects.listView-meta.xml
<ListView>
    <fullName>Internal_Projects</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>EMS_TM_StartDate__c</columns>
    <columns>EMS_TM_EndDate__c</columns>
    <columns>EMS_TM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EMS_TM_Project__c.Internal_Projects</value>
    </filters>
    <label>Internal Projects</label>
</ListView>