force-app/main/default/objects/EMS_TM_Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_StartDate__c</columns>
    <columns>EMS_TM_EndDate__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LoginedUserContact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Projects</label>
</ListView>